Minor fixes everywhere for landing page on mobile

--- a/components/hero-banner.scss
+++ b/components/hero-banner.scss
@@ -16,6 +16,7 @@
     top: 0px;
     z-index: -2;
     left: 0px;
+    overflow: hidden;
   }
 
 }
